--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "exercise/htmlpurifier-bundle": "^4.1",
         "league/csv": "^9.8",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "6.2.*",
